# license-exprs

./: Cargo.toml  README.md
examples/: fetch.rs
src/: constants.rs  errors.rs  lexer.rs  lib.rs  parser.lalrpop  parser_types.rs  spdx.lalrpop  spdx.rs
tests/: spdx.rs  validate_license_expr.rs
