[package]
name = "license-exprs"
version = "1.3.0"
authors = ["Without Boats <woboats@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Validate SPDX 2.1 license expressions."
repository = "https://github.com/withoutboats/license-exprs"

[[example]]
name = "fetch-license-list-from-spdx"
path = "examples/fetch.rs"

[dependencies]
failure = { version = "0.1.1", features = ["derive"] }

[dev-dependencies]
reqwest = "0.8"
serde_json = "1"
