[package]
name = "license-exprs"
version = "1.4.0"
authors = ["Without Boats <woboats@gmail.com>"]
license = "Apache-2.0 OR MIT"
description = "Validate SPDX 2.1 license expressions using SPDX License List 3.1 identifiers."
repository = "https://github.com/withoutboats/license-exprs"

[workspace]
members = [".", "fetch-license-list-from-spdx"]

[dependencies]
lazy_static = "1.3.0"
regex = "1.1.6"
lalrpop-util = "0.17.0"
failure = "0.1.5"

[build-dependencies]
lalrpop = "0.17.0"
